<resources>
    <string name="app_name" translatable="false">Proyecto Integrador</string>
    <string name="titulo" translatable="false">Módulo Escolar</string>

    <string name="db_alumnos" translatable="false">alumnos.db</string>
    <string name="db_materias" translatable="false">materias.db</string>
    <string name="db_calificaciones" translatable="false">calificaciones.db</string>

    <string name="table_alumnos" translatable="false">alumnos</string>
    <string name="table_materias" translatable="false">materias</string>
    <string name="table_calificaciones" translatable="false">calificaciones</string>

    <string name="matricula" translatable="false">Matrícula</string>
    <string name="key" translatable="false">Clave</string>

    <string name="name" translatable="false">Nombre</string>
    <string name="creditos" translatable="false">Créditos</string>

    <string name="calif" translatable="false">Calificación</string>
    <string name="califs" translatable="false">Calificaciones</string>
    <string name="promedio" translatable="false">Promedio</string>

    <string name="apellido_p" translatable="false">Apellido Paterno</string>
    <string name="apellido_m" translatable="false">Apellido Materno</string>

    <string name="btn_fecha" translatable="false">Presiona para ingresar\nla fecha de nacimiento</string>
    <string name="bdate" translatable="false">Fecha de Nacimiento</string>

    <string name="gender" translatable="false">Género</string>
    <string name="male" translatable="false">Masculino</string>
    <string name="female" translatable="false">Femenino</string>
    <string name="nonbinary" translatable="false">No Binario</string>
    <string name="other_gender" translatable="false">Otro</string>
    <string name="gender_hint" translatable="false">Escribe el género</string>

    <string name="btn_save" translatable="false">Guardar</string>
    <string name="btn_update" translatable="false">Actualizar</string>
    <string name="btn_cancel" translatable="false">Cancelar</string>
    <string name="btn_back" translatable="false">Regresar</string>
    <string name="btn_clear" translatable="false">Limpiar Datos</string>

    <string name="btn_ctrl_escolar" translatable="false">Control Escolar</string>
    <string name="btn_prof" translatable="false">Profesores</string>
    <string name="btn_alumno" translatable="false">Alumnos</string>
    <string name="btn_materias" translatable="false">Materias</string>
    <string name="btn_calificar" translatable="false">Calificar</string>

    <string name="btn_matricula" translatable="false">Confirmar Matrícula</string>
    <string name="btn_date" translatable="false">Seleccionar Fecha</string>"

    <string name="btn_new_alumno" translatable="false">Nuevo Alumno</string>
    <string name="btn_new_materia" translatable="false">Nueva Materia</string>

    <string name="btn_delete" translatable="false">Eliminar</string>
    <string name="btn_edit" translatable="false">Editar</string>
    <string name="btn_corregir" translatable="false">Corregir</string>

    <string name="btn_edit_materia" translatable="false">Editar Materia</string>
    <string name="btn_edit_alumno" translatable="false">Editar Alumno</string>
    <string name="btn_edit_calif" translatable="false">Corregir Calificación</string>

    <string name="btn_asignar_calif" translatable="false">Asignar Calificación</string>
    <string name="btn_delete_calif" translatable="false">Eliminar Calificación</string>"
    <string name="btn_ver_calif" translatable="false">Ver Calificaciones</string>

    <string name="no_matricula_ex" translatable="false">Escribe la matrícula</string>
    <string name="matricula_invalida_ex" translatable="false">Matrícula inválida</string>

    <string name="edit_calif" translatable="false">Corregir Calificación</string>
    <string name="new_calif" translatable="false">Nueva Calificación</string>"

    <string name="no_nombre_alumno_ex" translatable="false">Escribe el nombre</string>
    <string name="no_apellido_p_ex" translatable="false">Escribe el apellido paterno</string>
    <string name="no_cum_ex" translatable="false">Indica la fecha de nacimiento</string>
    <string name="no_genero_ex" translatable="false">Selecciona al menos un género</string>
    <string name="eliminar_ex" translatable="false">Error al eliminar a </string>

    <string name="no_clave_ex" translatable="false">Escribe la clave</string>
    <string name="no_nombre_materia_ex" translatable="false">Escribe el nombre</string>
    <string name="no_creditos_ex" translatable="false">Indica el número de créditos</string>
    <string name="no_calif_ex" translatable="false">Calificación inválida</string>"

    <string name="spinner_default" translatable="false">Selecciona...</string>
    <string name="default_text" translatable="false">:b</string>

    <string name="muy_bien" translatable="false">MB</string>
    <string name="bien" translatable="false">B</string>
    <string name="suficiente" translatable="false">S</string>
    <string name="no_aprobado" translatable="false">NA</string>
</resources>