<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editar_alumno"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/amarillopastel"
    tools:context=".EditarAlumno">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/btn_edit_alumno"
        android:textSize="34sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintHorizontal_bias="0.5"/>

    <LinearLayout
        android:layout_width="375dp"
        android:layout_height="324dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintHorizontal_bias="0.5">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/matricula"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/matricula"
                    android:textStyle="bold"
                    android:textSize="18sp"/>
                <EditText
                    android:id="@+id/lector_matricula"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"/>

                <TextView
                    android:id="@+id/nombre"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textStyle="bold"
                    android:textSize="18sp"/>
                <EditText
                    android:id="@+id/lector_nombre"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"/>

                <TextView
                    android:id="@+id/apellido_p"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apellido_p"
                    android:textStyle="bold"
                    android:textSize="18sp"/>
                <EditText
                    android:id="@+id/lector_apellido_p"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"/>

                <TextView
                    android:id="@+id/apellido_m"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apellido_m"
                    android:textStyle="bold"
                    android:textSize="18sp"/>
                <EditText
                    android:id="@+id/lector_apellido_m"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"/>

                <TextView
                    android:id="@+id/fecha"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bdate"
                    android:textStyle="bold"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/lector_fecha"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="date"
                    android:focusable="false"/>

                <TextView
                    android:id="@+id/genero"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="24dp"/>
                <CheckBox
                    android:id="@+id/masculino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:visibility="visible"
                    android:gravity="center_vertical"/>
                <CheckBox
                    android:id="@+id/femenino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:visibility="visible"
                    android:gravity="center_vertical"/>
                <CheckBox
                    android:id="@+id/nobinario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nonbinary"
                    android:visibility="visible"
                    android:gravity="center_vertical"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">

                    <Button
                        android:id="@+id/btn_otro_genero"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/other_gender"
                        android:visibility="visible"
                        android:gravity="center_vertical"
                        android:backgroundTint="@color/azulmetalico"
                        android:textColor="@color/white"
                        android:layout_marginEnd="32dp"/>
                    <EditText
                        android:id="@+id/lector_otro_genero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/gender_hint"
                        android:gravity="center"
                        android:visibility="visible"
                        android:inputType="text"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal|bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:layout_constraintHorizontal_bias="0.5">
        <Button
            android:id="@+id/btn_save"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/verdebosque"
            android:text="@string/btn_save"
            android:textSize="28sp"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/btn_back"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_back"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/naranjaclaro"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>