<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/second"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verdepastel"
    tools:context=".SecondActivity">

    <LinearLayout
        android:layout_width="375dp"
        android:layout_height="694dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.5">

        <TextView
            android:id="@+id/titulo"
            android:visibility="visible"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textStyle="bold"
            android:textSize="34sp"
            android:gravity="center"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="494dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nombre"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textStyle="bold"
                    android:textSize="18sp"/>
                <EditText
                    android:id="@+id/lector_nombre"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"/>

                <TextView
                    android:id="@+id/apellido_p"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apellido_p"
                    android:textStyle="bold"
                    android:textSize="18sp"/>
                <EditText
                    android:id="@+id/lector_apellido_p"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"/>

                <TextView
                    android:id="@+id/apellido_m"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apellido_m"
                    android:textStyle="bold"
                    android:textSize="18sp"/>
                <EditText
                    android:id="@+id/lector_apellido_m"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"/>

                <TextView
                    android:id="@+id/fecha"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bdate"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <CalendarView
                    android:id="@+id/fecha_calendario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/genero"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginBottom="24dp"/>
                <CheckBox
                    android:id="@+id/masculino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:visibility="visible"
                    android:gravity="center_vertical"/>
                <CheckBox
                    android:id="@+id/femenino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:visibility="visible"
                    android:gravity="center_vertical"/>
                <CheckBox
                    android:id="@+id/nobinario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nonbinary"
                    android:visibility="visible"
                    android:gravity="center_vertical"/>

                <TextView
                    android:id="@+id/otro_genero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/other_gender"/>
                <EditText
                    android:id="@+id/lector_otro_genero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"/>

                <Button
                    android:id="@+id/boton_guardar"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/azulchillon"
                    android:text="@string/save"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <Button
        android:id="@+id/btn_back"
        android:visibility="visible"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_regresar"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/crema"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:layout_constraintHorizontal_bias="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>