<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editar_materia"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/moradopastel"
    tools:context=".EditarMateria">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/btn_edit_materia"
        android:textSize="34sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintHorizontal_bias="0.5"/>

    <LinearLayout
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintHorizontal_bias="0.5">

        <TextView
            android:id="@+id/clave"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/key"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/lector_clave"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:id="@+id/nombre"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/lector_nombre"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:id="@+id/creditos"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creditos"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/lector_creditos"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal|bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:layout_constraintHorizontal_bias="0.5">

        <Button
            android:id="@+id/btn_update"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/verdebosque"
            android:text="@string/btn_update"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btn_cancel"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/rojoclaro"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>