<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/control_escolar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verdepastel"
    tools:context=".ControlEscolar">

    <TextView
        android:id="@+id/titulo"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ctrl_escolar"
        android:textStyle="bold"
        android:textSize="64sp"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225"
        app:layout_constraintHorizontal_bias="0.5"/>

    <LinearLayout
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        app:layout_constraintHorizontal_bias="0.5">

        <Button
            android:id="@+id/btn_alumnos"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_alumno"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/naranjaclaro"
            android:layout_marginBottom="24dp"/>

        <Button
            android:id="@+id/btn_materias"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_materias"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/rosafuerte"
            android:layout_marginBottom="24dp"/>

        <Button
            android:id="@+id/btn_back"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_back"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/dorado"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>